# ai-matrix

./: .gitattributes  README.md  RELEASE.md
layer-based_benchmark/cnn/: cnn_ops.py  test_cnn_ops.sh
layer-based_benchmark/rnn/: cudnn_rnn_ops.py  rnn_ops.py  test_cudnn_rnn_ops.sh  test_rnn_ops.sh
macro_benchmark/: README.md  compare_results.py  prepare_dataset.sh  prepare_dataset_tf.sh  prepare_docker.sh  process_results.py  process_results.sh  process_results_trt_fp16.sh  process_results_trt_fp32.sh  process_results_trt_int8.sh  run-everything.sh  run-infer-trt-fp16.sh  run-infer-trt-fp32.sh  run-infer-trt-int8.sh  run-infer-trt-tf-fp16.sh  run-infer-trt-tf-fp32.sh  run-infer-trt-tf-int8.sh  run-infer.sh  run-train.sh  run.sh  run_pt.sh  run_tf.sh  setup-trt.sh  setup.sh  setup_tf.sh  system-info.sh
macro_benchmark/BERT_Google/: checksum.md5  infer.sh  prepare_dataset.sh  train.sh
macro_benchmark/BERT_NVIDIA/: infer.sh  prepare_dataset.sh  process_results.py  run.sh  run_squad.py  train.sh
macro_benchmark/BERT_PyTorch/: INSTRUCTIONS.md  modeling.py  prepare_dataset.sh  process_results.py  run.sh  run_pretraining.py  run_squad.py
macro_benchmark/BERT_Tensorflow/: INSTRUCTIONS.md  run.sh  run_squad.py  train.sh
macro_benchmark/CNN_Caffe/: README.md  ResNet-152-model.caffemodel  ResNet-50-model.caffemodel  alexnet_iter_500.caffemodel  cal_stat.py  checksum.md5  densenet121.caffemodel  densenet121_deploy.prototxt  googlenet_bn_deploy.prototxt  googlenet_bn_stepsize_6400_iter_1200000.caffemodel  process_results.py  resnet50_deploy.prototxt  resnet50_iter_500.caffemodel  run_test_tensorRT-5-docker-fp16.sh  run_test_tensorRT-5-docker-fp32.sh  run_test_tensorRT-5-docker-int8.sh  run_test_tensorRT-5-docker.sh  run_test_tensorRT-5.sh  run_test_tensorRT-docker.sh  run_test_tensorRT.sh  setup.sh
macro_benchmark/CNN_HanGuang/: README.md
macro_benchmark/CNN_HanGuang/code/resnet/tfcpp/classification_and_detection/cpp/: CMakeLists.txt  classification.cc  image_loader.cc  image_loader.h  op.cc  op.h  python_site.sh  run.sh  run_accuracy.sh  run_perf.sh  test_harness.cc  test_harness.h  tf_version.sh
macro_benchmark/CNN_Mxnet/: Dockerfile  README.md  train_imagenet.py
macro_benchmark/CNN_Tensorflow/: README.md  infer-all-accuracy.sh  infer-all-pretrained-models.sh  infer-all-synthetic-input.sh  infer-all-trt-accuracy.sh  infer-all-trt-synthetic-input-fp16.sh  infer-all-trt-synthetic-input-fp32.sh  infer-all-trt-synthetic-input-int8.sh  infer-all-trt-synthetic-input.sh  infer-all.sh  infer.sh  nvcnn.py  process_results.py  run.sh  setup.sh  train-all-pressure.sh  train-all.sh  train.sh
macro_benchmark/CPN/: checksum.md5  infer.sh  prepare_dataset.sh  process_results.py  run.sh  setup.sh  train.sh
macro_benchmark/CRNN/: checksum.md5  infer.sh  prepare_dataset.sh  process_results.py  requirements.txt  run.sh  setup.sh  train.sh
macro_benchmark/DIEN/: README.md  checksum.md5  infer.sh  prepare_dataset.sh  process_results.py  run.sh  setup.sh  train.sh
macro_benchmark/DIEN_TF2/: README.md  prepare_dataset.sh  run.sh  train.sh
macro_benchmark/DSSD/: .gitignore  Makefile  Makefile.config  README.md  checksum.md5  infer.sh  prepare_dataset.sh  process_results.py  run.sh  setup.sh  train.sh  train_commands.sh
macro_benchmark/DeepInterest/: README.md  checksum.md5  infer.sh  prepare_dataset.sh  process_results.py  run.sh  setup.sh  train.sh
macro_benchmark/DeepSpeech/: .gitattributes  0_download.sh  1_run.sh  README.md
macro_benchmark/Faster_RCNN/: checksum.md5  infer.sh  prepare_dataset.sh  process_results.py  run.sh  setup.sh  train.sh
macro_benchmark/GCN/: requirements.txt
macro_benchmark/Mask_RCNN/: README.md  checksum.md5  download_coco.py  infer.sh  prepare_dataset.sh  process_results.py  run.sh  setup.sh  train.sh
macro_benchmark/Mask_RCNN_PyTorch/: Dockerfile  README.md  config_DGX1.sh  config_DGX1_multi.sh  config_DGX2.sh  config_DGX2_multi.sh  config_DGX2_multi_4x16x2.sh  process_results.py  requirements.txt  run.sh  run.sub  run_1card.sh  run_1node.sh  run_2node.sh  run_and_time.sh  setup.py
macro_benchmark/NCF/: NCF.py  NCF_input.py  README.md  checksum.md5  infer.sh  main.py  process_results.py  (+3 more)
macro_benchmark/SegLink/seglink/cpp/: CMakeLists.txt
results/: README.md  caffe_macro.md  tf_macro.md
(+1039 files in other folders)
